--- a/pom.xml
+++ b/pom.xml
@@ -227,9 +227,9 @@
 			<version>1.1.1</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.5</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.16.0</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
