--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>csiro.pidsvc</groupId>
 	<artifactId>pidsvc</artifactId>
 	<packaging>war</packaging>
-	<version>1.2-SNAPSHOT</version>
+	<version>1.2</version>
 	<name>Persistent Identifiers PID Service (PID Service)</name>
 	<url>https://confluence.csiro.au/x/9ZMKGg</url>
 	<licenses>
